// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Ripe's group destination action: all fields 1`] = `
Object {
  "anonymousId": "DY&TUQqmpg2I",
  "groupId": "DY&TUQqmpg2I",
  "messageId": "32efad2e-d314-436b-b9c0-1c0b7182fa30",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "traits": Object {
    "testType": "DY&TUQqmpg2I",
  },
  "userId": "DY&TUQqmpg2I",
}
`;

exports[`Testing snapshot for Ripe's group destination action: required fields 1`] = `
Object {
  "anonymousId": "DY&TUQqmpg2I",
  "groupId": "DY&TUQqmpg2I",
  "messageId": "a35913da-cf84-4e24-8c0a-7ecbc1b4578c",
  "timestamp": "2023-01-12T12:11:39.063Z",
}
`;
